styling and functionality change

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Sail Away"
+      content="From Nova Scotia to Nandipo"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bitter:wght@300&family=Roboto+Slab:wght@300&family=Roboto:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400&family=Cinzel:wght@400&family=Bitter:wght@300&family=Roboto+Slab:wght@300&family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
     <!--
@@ -20,7 +20,7 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
-    <title>Sail Away</title>
+    <title>From Nova Scotia to Nandipo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
